slides: add starlette slides and graphics

--- a/static/index.html
+++ b/static/index.html
@@ -129,16 +129,25 @@
                 <div style="font-size: 100%">G-NAF (2004) &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; G-NAF-Core (2022)</div>
             </div>
         </section>
-
         <section id="title-flask"  data-background="graphics/github_flask.png">
             <div style="background-color: rgba(0, 0, 0, 0.6); color: #fff; padding: 20px;">
                 <div style="font-size: 200%">Flask</div>
             </div>
         </section>
-
         <section id="title-flask-del"  data-background="graphics/github_flask.png">
             <div style="background-color: rgba(0, 0, 0, 0.6); color: #fff; padding: 20px;">
                 <div style="font-size: 200%"><del>Flask</del></div>
+            </div>
+        </section>
+        <section id="title-starlette"  data-background="graphics/github_starlette.png">
+            <div style="background-color: rgba(0, 0, 0, 0.6); color: #fff; padding: 20px;">
+                <div style="font-size: 200%">Starlette</div>
+            </div>
+        </section>
+
+        <section id="title-starlette-del"  data-background="graphics/github_starlette.png">
+            <div style="background-color: rgba(0, 0, 0, 0.6); color: #fff; padding: 20px;">
+                <div style="font-size: 200%"><del>Starlette</del></div>
             </div>
         </section>
 
