add graphics bdfl and trends

--- a/static/index.html
+++ b/static/index.html
@@ -157,7 +157,7 @@
                 <div style="font-size: 200%">FastAPI</div>
             </div>
         </section>
-        <section id="trends" data-background="graphics/trends.png"></section>
+        <section id="trends" data-background="graphics/background/trends.png"></section>
         <section id="code-flask">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
                 <code>app.py</code>
@@ -385,7 +385,7 @@ async def root(term: str = None):
             </div>
         </section>
 
-        <section id="typing-bdfl" data-background="graphics/bdfl.png"></section>
+        <section id="typing-bdfl" data-background="graphics/background/bdfl.png"></section>
 
         <section id="typing-basics">
             <pre>
