--- a/static/index.html
+++ b/static/index.html
@@ -16,6 +16,9 @@
         .subtext {
             font-size: 85%
         }
+        .code-small {
+            margin-top: 15px;
+        }
     </style>
 </head>
 <body>
@@ -387,42 +390,39 @@ async def root(term: str = None):
 
         <section id="typing-bdfl" data-background="graphics/background/bdfl.png"></section>
 
-        <section id="typing-basics">
+        <section id="typing-basics-0">
             <pre>
-                <code class="python"  style="font-size: 1.1em; line-height: 1.25">>>> 123           # int object
+                <code class="python code-small">>>> 123             # int object
                 </code>
-                <br>
-                <code class="python"  style="font-size: 1.1em; line-height: 1.25">>>> 123.456       # float object
+                <code class="python code-small">>>> 123.456         # float object
                 </code>
-                <br>
-                <code class="python"  style="font-size: 1.1em; line-height: 1.25">>>> "abc"         # str object
+                <code class="python code-small">>>> "abc"           # str object
                 </code>
-                <br>
-                <code class="python"  style="font-size: 1.1em; line-height: 1.25">>>> True          # bool object
+                <code class="python code-small">>>> [1, 2, 3]       # list object
                 </code>
-                <br>
-                <code class="python"  style="font-size: 1.1em; line-height: 1.25">>>> Foo()         # custom object</code>
-<code  style="font-size: 0.9em; line-height: 1.25">
+                <code class="python code-small">>>> True            # bool object
+                </code>
+                <code class="python code-small">>>> Foo()           # custom object
 
-                </code>
+
+
+</code>
             </pre>
         </section>
         <section id="typing-basicsx2-all">
             <pre>
-                <code class="python"  style="font-size: 1.1em; line-height: 1.25">>>> 123     * 2   # int object
+                <code class="python code-small">>>> 123       * 2   # int object
 246                </code>
-                <br>
-                <code class="python"  style="font-size: 1.1em; line-height: 1.25">>>> 123.456 * 2   # float object
+                <code class="python code-small">>>> 123.456   * 2   # float object
 246.912                </code>
-                <br>
-                <code class="python"  style="font-size: 1.1em; line-height: 1.25">>>> "abc"   * 2   # str object
+                <code class="python code-small">>>> "abc"     * 2   # str object
 "abcabc"                </code>
-                <br>
-                <code class="python"  style="font-size: 1.1em; line-height: 1.25">>>> True    * 2   # bool object
+                <code class="python code-small">>>> [1, 2, 3] * 2   # list object
+[1, 2, 3, 1, 2, 3]</code>
+                <code class="python code-small">>>> True      * 2   # bool object
 2                </code>
-                <br>
-                <code class="python "  style="font-size: 1.1em; line-height: 1.25">>>> Foo()   * 2   # custom object</code>
-<code  style="font-size: 0.95em; line-height: 1.25">Traceback (most recent call last):
+                <code class="python code-small">>>> Foo()     * 2   # custom object
+Traceback (most recent call last):
   File "&lt;stdin&gt;", line 1, in &lt;module&gt;
 TypeError: unsupported operand type(s) for *: 'Foo' and 'int'</code>
             </pre>
