--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,11 @@
         .code-small {
             margin-top: 15px;
         }
+        .code-normal {
+            font-size: 1.1em;
+            line-height: 1.25em;
+        }
+        .width-fit {width: fit-content}
     </style>
 </head>
 <body>
@@ -463,18 +468,20 @@ Pylons/colander
             </div>
         </section>
 
-        <section id="pydantic-validation-basic0">
-            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
-                Type checking in Pydantic:
-            </div>
+        <section id="pydantic-validation-basic-0">
             <pre>
-                <code class="python"  style="font-size: 1.1em; line-height: 1.25; ">from pydantic import BaseModel
+                <code class="python code-small">from pydantic import BaseModel
+
+
+
+
 
 class MyPydantic(BaseModel):
     my_int: int
     my_float: float
     my_str: str
     my_bool: bool
+
                 </code>
             </pre>
             <aside class="notes">
@@ -482,23 +489,86 @@ class MyPydantic(BaseModel):
                 Something to do with serialisation.
             </aside>
         </section>
+        <section id="pydantic-validation-basic-1">
+            <pre>
+                <code class="python code-small">from pydantic import BaseModel
+from typing import List
 
-        <section id="pydantic-validation-basic-data">
-            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
-                Type checking in Pydantic:
-            </div>
 
-            <pre style="padding: 30px 0;  width: fit-content">
-                <code class="python"  style="font-size: 1.2em; line-height: 1.25; ">
-my_data = {
-  "my_int": 123,
-  "my_float": 123.456,
-  "my_str": "abc",
-  "my_bool": True,
-}
+
+
+class MyPydantic(BaseModel):
+    my_int: int
+    my_float: float
+    my_str: str
+    my_bool: bool
+    my_list: List[int]
                 </code>
             </pre>
         </section>
+        <section id="pydantic-validation-basic-2">
+            <pre>
+                <code class="python code-small">from pydantic import BaseModel
+from typing import List
+
+class Foo(BaseModel):
+    baz: str
+
+class MyPydantic(BaseModel):
+    my_int: int
+    my_float: float
+    my_str: str
+    my_bool: bool
+    my_list: List[int]
+    my_custom: Foo  </code>
+            </pre>
+        </section>
+
+        <section id="pydantic-validation-basic-data">
+            <pre>
+                <code class="python code-small width-fit" >>>> my_data = {
+...     "my_int": 123,
+...     "my_float": 123.456,
+...     "my_str": "abc",
+...     "my_bool": True,
+...     "my_list": [1, 2, 3],                                                                                                      .
+...     "my_custom": Foo(baz="qux"),
+... }
+
+
+</code>
+            </pre>
+        </section>
+        <section id="pydantic-validation-splat-kwargs">
+            <pre>
+                <code class="python code-small width-fit" >>>> my_data = {
+...     "my_int": 123,
+...     "my_float": 123.456,
+...     "my_str": "abc",
+...     "my_bool": True,
+...     "my_list": [1, 2, 3],
+...     "my_custom": Foo(baz="qux"),                                                                                             .
+... }
+>>> MyPydantic(**my_data)
+                </code>
+            </pre>
+        </section>
+        <section id="pydantic-validation-splat-kwargs">
+            <pre>
+                <code class="python code-small width-fit" >>>> my_data = {
+...     "my_int": 123,
+...     "my_float": 123.456,
+...     "my_str": "abc",
+...     "my_bool": True,
+...     "my_list": [1, 2, 3],
+...     "my_custom": Foo(baz="qux"),
+... }
+>>> MyPydantic(**my_data)
+MyPydantic(my_int=123, my_float=123.456, my_str='abc', my_bool=True, my_list=[1, 2, 3])</code>
+            </pre>
+        </section>
+
+
 
         <section id="pydantic-validation-custom">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
