slides: work on address background

--- a/static/index.html
+++ b/static/index.html
@@ -97,14 +97,40 @@
             </div>
         </section>
 
-
-        <section id="where-do-addresses-1" data-background="graphics/background/adelaide-planning.png">
+        <section id="what-is-addresses-1" data-background="graphics/background/address.png">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
-                <b>Where do addresses come from?</b>
+                <b>Australian Addresses</b>
             </div>
             <br>
-            <div style="padding: 20px;"><div><i><b>&nbsp;</b></i></div></div>
-            <div><i class="subtext">&nbsp;<br>&nbsp;</i></div>
+            <div style="background-color: rgba(0, 0, 0, 0.6); color: #fff; padding: 20px;">
+                <div></div>
+                <div><i class="subtext">Names for "locations"</i>
+                </div>
+            </div>
+
+        </section>
+        <section id="where-do-addresses-1" data-background="graphics/background/adelaide-planning.png">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <b>Where do addresses get defined?</b>
+            </div>
+            <div style="margin-top: 15px">
+                <div>&nbsp;<br>
+                    <img style="height: 180px; margin: 0 100px;">&nbsp;</img><br>
+            <br>
+                </div>
+            </div>
+        </section>
+
+        <section id="where-do-addresses-3" data-background="graphics/background/adelaide-planning.png">
+            <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                <b>Where do addresses get defined?</b>
+            </div>
+            <div style="background-color: rgba(0, 0, 0, 0.6); color: #fff; margin-top: 15px">
+                <div>Councils &nbsp; &plus; &nbsp; States &nbsp; <span style="opacity: 0.4">&plus; &nbsp; Federal</span><br>
+                    <img style="height: 180px; margin: 0 100px;" src="graphics/background/sources_3-rev_o.png"><br>
+                    <em>"guidelines"</em>
+                </div>
+            </div>
         </section>
         <section id="where-do-addresses-2" data-background="graphics/background/adelaide-planning.png">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
